# MiniDB

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/: MiniDB.h
src/: MiniDB.cpp  main.cpp
tests/: benchmark_minidb.cpp  test_minidb.cpp
